--- a/latest.meta.yaml
+++ b/latest.meta.yaml
@@ -1,35 +1,19 @@
-apiVersion: v2
-publisher: eclipse
-name: che-idea-ultimate
-version: 2020.3.3
-type: Che Editor
-displayName: IntelliJ IDEA Ultimate
-title: IntelliJ IDEA Ultimate as Editor for Eclipse Che
-description: IntelliJ IDEA Ultimate running using Projector
-icon: https://resources.jetbrains.com/storage/products/intellij-idea/img/meta/intellij-idea_logo_300x300.png
-category: Editor
-repository: https://github.com/che-incubator/jetbrains-editor-images
-firstPublicationDate: "2021-06-29"
-spec:
-  endpoints:
-    - name: "intellij"
-      public: true
-      targetPort: 8887
-      attributes:
-        protocol: http
-        type: ide
-        secure: true
-        cookiesAuthEnabled: true
-        path: /?backgroundColor=434343&wss
-  containers:
-    - name: che-idea
-      image: "quay.io/lucadepandis_kiratech/che-idea-ultimate:2020.3.3"
-      mountSources: true
-      volumes:
-        - mountPath: "/home/projector-user"
-          name: projector-user
-      ports:
-        - exposedPort: 8887
-      memoryLimit: 4096M	
-      cpuLimit: 1500m	
-      cpuRequest: 600m
+apiVersion: 1.0.0
+metadata:
+  generateName: java-tomcat-
+projects: {}
+components:
+  - type: chePlugin
+    id: redhat/java8/latest
+  - type: chePlugin
+    id: redhat/dependency-analytics/latest
+  - type: dockerimage
+    alias: tomcat
+    image: quay.io/kiratech_ldepandis/tomcat:latest
+    memoryLimit: 1024Mi
+    endpoints:
+      - name: tomcat
+        port: 8080
+        attributes:
+          path: /
+    mountSources: false
