--- a/meta.yaml
+++ b/meta.yaml
@@ -1,7 +1,12 @@
-metadata:
-  name: che-idea-ultimate
-components:
-  - type: cheEditor
-    reference: 'https://raw.githubusercontent.com/ldepandis/che-idea-ultimate/main/latest.meta.yaml'
-    alias: che-idea-ultimate
-apiVersion: 1.0.0
+{
+  "displayName": "Java with Tomcat",
+  "description": "Java stack with OpenJDK and Tomcat 9.x",
+  "tags": [
+    "Java",
+    "OpenJDK",
+    "Tomcat"
+  ],
+  "links": {
+    "self": "https://raw.githubusercontent.com/ldepandis/tomcat-codeready/main/latest.meta.yaml"
+  }
+}
