--- a/latest.meta.yaml
+++ b/latest.meta.yaml
@@ -1,7 +1,7 @@
 apiVersion: 1.0.0
 metadata:
   generateName: java-tomcat-
-projects: {}
+projects: []
 components:
   - type: chePlugin
     id: redhat/java8/latest
